Fix header alignment.

--- a/src/client/container/header/header.css
+++ b/src/client/container/header/header.css
@@ -10,13 +10,13 @@
 }
 
 .csioChangeStatus {
-    padding-right: 0;
     cursor: pointer;
 }
 
 .csioHeaderText {
     font-family: AmazonEmber;
     color: #ffffff;
+    font-size: 15px;
 }
 
 .acPointer {
@@ -24,5 +24,5 @@
 }
 
 .dialerImage {
-    margin-top: 50%;
+    margin-top: 0.5em;
 }
